# MP3-Control-Project

./: .gitmodules  CMakeLists.txt  README.md  Skill.md  main.c
fs/: index.shtml  status.shtml
inc/: FreeRTOSConfig.h  dfplayer.h  fsdata.c  fsdata_custom.c  lwipopts.h  main_shared.h  web_server.h
src/: blink.pio  dfplayer.c  main.c  web_server.c
